profondeur ok largeur bug
peut etre revoir affichage final pcque peut etre pas la bonne façon, à voir apres avoir fini largeur