@@ -1,12 +1,15 @@
 import java.io.*;
+import java.sql.SQLOutput;
 import java.util.HashMap;
+import java.util.Iterator;
 import java.util.LinkedList;
 import java.util.Map;
 
 public class Labyrinthe {
     private Map<Integer, Map<Integer, Case>> lesCases;
     private Noeud depart;
-    private Algorithme algo;
+    private int maxX;
+    private int maxY;
 
     /**
      * Constructeur
@@ -39,6 +42,8 @@ public class Labyrinthe {
 
             int x = 0;
             int y = 0;
+            this.maxX = 0;
+            this.maxY = 0;
 
             while ((value = buff.read()) != -1){
                 char c = (char)value;
@@ -68,10 +73,11 @@ public class Labyrinthe {
                         //System.out.println(c+" "+x+" "+y);
                         x += 1;
                         break;
-                    default: System.out.println("ERR");
+                    default: //System.out.println("ERR");
                         break;
                 }
-
+                if(x > maxX) maxX = x-1; //On ne compte pas la derniere incrémentation de chaque ligne
+                if(y > maxY) maxY = y;
             }
             buff.close();
         }
@@ -103,18 +109,107 @@ public class Labyrinthe {
         return depart;
     }
 
-    public void setAlgo(Algorithme algo) {
-        this.algo = algo;
-    }
 
-    public void explorerLaby(){
+
+    public void explorerLaby(Algorithme algo, String filepath) {
+        //on initialise le laby
+        this.init("labyrinthe/labExemple.lab");
+        //on sauvegarde le labyrinthe de base
+        Map<Integer, Map<Integer, Case>> saveLaby = lesCases;
+        //on initialise la frontière qui contiendra les noeuds
         LinkedList<Noeud> frontiere = new LinkedList<>();
+        //on y ajoute le noeud de départ
         frontiere.add(depart);
+        //on initialise la liste qui contiendra toutes les actions effectuées pour atteindre la sortie
+        LinkedList<EnumAction> actions = new LinkedList<>();
+        //on initialise le nombre de noeuds créés à 1 (Le noeud de départ)
+        int nbNoeudsCree = 1;
+
+        //Tant que le premier élément de la frontière n'est pas une case de type sortie
+        while (frontiere.getFirst().getLacase().getType() != EnumCase.SORTIE) {
+
+            //on initialise la liste qui contient les noeuds à ajouter à la frontière
+            LinkedList<Noeud> lesNoeuds = new LinkedList<>();
+            //on récupère le noeud à développer
+            Noeud noeudActuel = frontiere.getFirst();
+
+            //on initialise les cases qui corresponderont aux 4 cases adjacentes de la case actuelle 
+            Case caseHaut;
+            Case caseBas;
+            Case caseDroite;
+            Case caseGauche;
+            //on récupère la case actuelle
+            Case caseActuelle = noeudActuel.getLacase();
+            //on récupère le X et le Y de la case actuelle
+            int caseActuelleY = caseActuelle.getY();
+            int caseActuelleX = caseActuelle.getX();
+
+            //on vérifie si il y a une case au dessus
+            if (caseActuelleY > 0) {
+                //On récupère la case du dessus à partir de la map qui contient toutes les cases du laby
+                caseHaut = lesCases.get(caseActuelleX).get(caseActuelleY - 1);
+                //On créé un noeud et on l'ajoute à la liste des noeuds potentiels
+                lesNoeuds.add(new Noeud(this, noeudActuel, EnumAction.HAUT, 1, noeudActuel.getProfondeur() + 1, caseHaut));
+            }
+            //on vérifie si il y a une case en dessous
+            if (caseActuelleY < maxY) {
+                //On récupère la case du dessous à partir de la map qui contient toutes les cases du laby
+                caseBas = lesCases.get(caseActuelleX).get(caseActuelleY + 1);
+                //On créé un noeud et on l'ajoute à la liste des noeuds potentiels
+                lesNoeuds.add(new Noeud(this, noeudActuel, EnumAction.BAS, 1, noeudActuel.getProfondeur() + 1, caseBas));
+            }
+            //on vérifie si il y a une case à gauche
+            if (caseActuelleX > 0) {
+                //On récupère la case de gauche à partir de la map qui contient toutes les cases du laby
+                caseGauche = lesCases.get(caseActuelleX - 1).get(caseActuelleY);
+                //On créé un noeud et on l'ajoute à la liste des noeuds potentiels
+                lesNoeuds.add(new Noeud(this, noeudActuel, EnumAction.GAUCHE, 1, noeudActuel.getProfondeur() + 1, caseGauche));
+
+            }
+            //on vérifie si il y a une case à droite
+            if (caseActuelleX < maxX) {
+                //On récupère la case de droite à partir de la map qui contient toutes les cases du laby
+                caseDroite = lesCases.get(caseActuelleX + 1).get(caseActuelleY);
+                //On créé un noeud et on l'ajoute à la liste des noeuds potentiels
+                lesNoeuds.add(new Noeud(this, noeudActuel, EnumAction.DROITE, 1, noeudActuel.getProfondeur() + 1, caseDroite));
+
+            }
 
 
-        System.out.println(frontiere.getFirst());
-        //Case caseHaut =
-        //TODO
+            System.out.println(lesCases.get(1).get(0).isVisite());
+            //on retire toutes les cases adjacentes qui ne sont pas/plus visitables (Mur, case déjà dans frontiere, case déjà explorée) de la liste contenant les noeuds à ajouter à la frontière
+            lesNoeuds.removeIf(monNoeud -> !lesCases.get(monNoeud.getLacase().getX()).get(monNoeud.getLacase().getY()).isVisite());
+            //on incrémente le nombre total de noeuds créés
+            nbNoeudsCree += lesNoeuds.size();
+
+
+            System.out.println(frontiere);
+            //Pour tous les noeuds de la frontière on change l'attribut des cases du laby correspondantes pour les rendre non visitables
+            for (Noeud n : frontiere) {
+                lesCases.get(n.getLacase().getX()).get(n.getLacase().getY()).setVisite(false);
+                System.out.println(n+ " "+n.getLacase().getX()+" "+n.getLacase().getY());
+
+            }
+
+            //on ajoute l'action effectuée à la liste d'actions
+            actions.add(noeudActuel.getAction());
+            //On retire le noeud que l'on vient de développer
+            frontiere.removeFirst();
+            //on ajoute les nouveaux noeuds à la frontière, l'ajout est différent selon l'algorithme passé en param
+            frontiere = algo.add(frontiere, lesNoeuds);
+        }
+        //on ajoute la dernière action
+        actions.add(frontiere.getFirst().getAction());
+        //on supprime la première action qui corespond à l'entrée du Labyrinthe
+        actions.removeFirst();
+
+        System.out.println(" ");
+        System.out.println("Algorithme : "+algo.getClass());
+        System.out.println("nbNoeudsCree "+nbNoeudsCree);
+        System.out.println("longueur chemin "+frontiere.getFirst().getProfondeur());
+        System.out.println("Actions "+actions);
+
+
 
     }
 
